--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest --coverage",
     "test-live": "cross-env DEBUG_MODE=1 jest --coverage",
     "build": "rimraf -rf ./dist ./lib ./esm && rollup --config",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ci": "run-s lint test build"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "cross-env": "^7.0.3",
     "jest": "26.0.1",
     "jest-electron": "^0.1.12",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.7",
     "rollup-plugin-babel": "^4.4.0",
